@@ -313,6 +313,10 @@ $insert 8 debug "errorRecovery(): pop state " << top__()
         // error nevertheless doesn't. In that case parsing terminates 
     checkEOF__();
 
+//    int waitingToken = d_token__;             // save the unexpected token
+//    STYPE__ waitingVal = d_val__;             // and semantic value for later
+//                                              // processing
+
     pushToken__(_error_);                     // specify _error_ as next token
     push__(lookup(true));                     // push the error state
 
@@ -350,6 +354,11 @@ $insert 16 debug "errorRecovery() SUCCEEDED: reduce by rule " << -action << ", t
 $insert 16 debug symbol(d_token__)
             }
             d_acceptedTokens__ = 0;         // reset accept count on error
+
+//            d_val__ = waitingVal;           // restore the semantic value
+//            pushToken__(waitingToken);      // and token having caused the
+//                                            // error: processing them should
+//                                            // now be OK.
             return;
         }
         catch (...)
