@@ -41,6 +41,8 @@ bisonc++ (2.3.2)
   * #line directives in rule action blocks now correctly identify the grammar
     specification file in which the action block was defined.
 
+  * Extra empty line at the end of state transition tables removed
+
 bisonc++ (2.3.1)
 
   * Fixed character returned in escaped constants. E.g., at '\'' the \ was
